# Buffalo

./: .gitmodules  Buffalo.sln  CMakeLists.txt  GenerateProjects.sh  README.md  premake5.lua
Buffalo/: Buffalo.vcxproj  Buffalo.vcxproj.filters  CMakeLists.txt
Buffalo/src/: Buffalo.h
Buffalo/src/Buffalo/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
